update JsonRef with direct URI and JsonPointer fields, and new factory api. #1